packages/webassemblyjs/test/fixtures/type-errors/select-too-few/module.wast
(module (func $arity-0 (select (nop) (nop) (i32.const 1))))
